integration_tests/tests/integration_tests/snapshots/integration_tests__mpl_core_group_tests__mpl_core_get_assets_by_collection_for_collection_in_group.snap
---
source: integration_tests/tests/integration_tests/mpl_core_group_tests.rs
assertion_line: 423
expression: response
---
{
  "total": 1,
  "limit": 50,
  "page": 1,
  "items": [
    {
      "interface": "MplCoreAsset",
      "id": "CHWtWeBtW9SsccMsxdAL6APrRH4BzppR6EYP8TjK1ZLP",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://example.com/das-test-asset-in-collection-in-group.json",
        "files": [],
        "metadata": {
          "name": "DAS Test: Asset In Collection In Group",
          "symbol": ""
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "2VqRJUywvWrNd6bhoZ3CZUsqXGgTtWCTbfvpdUWnXHT2",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "BBAEBZeNsDx8mgMAHSkLKzC8SPhqVJWGr9cGAk33TRTE"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "2VqRJUywvWrNd6bhoZ3CZUsqXGgTtWCTbfvpdUWnXHT2"
      },
      "mutable": true,
      "burnt": false,
      "plugins": {},
      "mpl_core_info": {
        "plugins_json_version": 1
      },
      "external_plugins": [],
      "is_agent": false,
      "asset_signer": "4ttAAn4cK9T1xAzUYL5pk4EoZa4sreoF9EtTA6yBEUHm"
    }
  ]
}
