integration_tests/tests/integration_tests/snapshots/integration_tests__mpl_core_group_tests__mpl_core_get_assets_by_group_for_group_with_collection.snap
---
source: integration_tests/tests/integration_tests/mpl_core_group_tests.rs
assertion_line: 290
expression: response
---
{
  "total": 1,
  "limit": 50,
  "page": 1,
  "items": [
    {
      "interface": "MplCoreCollection",
      "id": "Ge8yEpxv2KEZDKCbGUhdD8h5v2M377Ep9H94aR5DPKd1",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://example.com/das-test-collection-in-group.json",
        "files": [],
        "metadata": {
          "name": "DAS Test: Collection In Group",
          "symbol": ""
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "2VqRJUywvWrNd6bhoZ3CZUsqXGgTtWCTbfvpdUWnXHT2",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [
        {
          "group_key": "group",
          "group_value": "9JwY1rksJdUZ5AJNrzS56fJy8D5pvHbjuSzoLS1SAfG1"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "2VqRJUywvWrNd6bhoZ3CZUsqXGgTtWCTbfvpdUWnXHT2"
      },
      "mutable": true,
      "burnt": false,
      "plugins": {
        "groups": {
          "data": {
            "groups": [
              "9JwY1rksJdUZ5AJNrzS56fJy8D5pvHbjuSzoLS1SAfG1"
            ]
          },
          "index": 0,
          "offset": 140,
          "authority": {
            "type": "UpdateAuthority",
            "address": null
          }
        }
      },
      "mpl_core_info": {
        "num_minted": 0,
        "current_size": 0,
        "plugins_json_version": 1
      },
      "external_plugins": [],
      "is_agent": false
    }
  ]
}
